Actually fix the header overflow this time

--- a/dev/nano/nano.css
+++ b/dev/nano/nano.css
@@ -17,7 +17,7 @@ div#header .container {
 div#header .container .row {
 	margin-left: -20px;	
 }
-div#header .container .span4 {
+div#header .row .description {
 	width: 280px;	
 }
 
